--- a/PhoneReseller/app.config
+++ b/PhoneReseller/app.config
@@ -1,13 +1,18 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
 </configSections>
 <connectionStrings>
-    <add name="PhoneReseller.Properties.Settings.PhonesConnectionString"
-        connectionString="data source=H:\gipard\projects\2010\PhoneReseller\Phones"
-        providerName="System.Data.SQLite" />
-    <add name="PhoneReseller.Properties.Settings.PhonesConnectionString1"
-        connectionString="data source=H:\gipard\projects\2010\PhoneReseller\PhoneReseller\bin\Debug\Phones"
-        providerName="System.Data.SQLite" />
+    <add name="PhoneReseller.Properties.Settings.PhonesConnectionString" connectionString="data source=H:\gipard\projects\2010\PhoneReseller\Phones" providerName="System.Data.SQLite" />
+    <add name="PhoneReseller.Properties.Settings.PhonesConnectionString1" connectionString="data source=H:\gipard\projects\2010\PhoneReseller\PhoneReseller\bin\Debug\Phones" providerName="System.Data.SQLite" />
 </connectionStrings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
